tests/suite/snapshots/suite__check__tests__check__bad-early-bind.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
2:12 error:Unbound variable a
